--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
           <li>
             <a
               class="active d-flex align-center fs-14 c-black rad-6 p-10"
-              href="index.html"
+              href="dashboard.html"
             >
               <i class="fa-solid fa-chart-bar fa-fw"></i>
               <span>Dashboard</span>
@@ -32,7 +32,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="settings.html"
+              href="sections/settings.html"
             >
               <i class="fa-solid fa-gear fa-fw"></i>
               <span>Settings</span>
@@ -41,7 +41,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="profile.html"
+              href="sections/profile.html"
             >
               <i class="fa-regular fa-user fa-fw"></i>
               <span>Profile</span>
@@ -50,7 +50,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="projects.html"
+              href="sections/projects.html"
             >
               <i class="fa-solid fa-diagram-project fa-fw"></i>
               <span>Projects</span>
@@ -59,7 +59,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="courses.html"
+              href="sections/courses.html"
             >
               <i class="fa-solid fa-graduation-cap fa-fw"></i>
               <span>Courses</span>
@@ -68,7 +68,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="friends.html"
+              href="sections/friends.html"
             >
               <i class="fa-solid fa-user-group fa-fw"></i>
               <span>Friends</span>
@@ -77,7 +77,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="files.html"
+              href="sections/files.html"
             >
               <i class="fa-regular fa-file fa-fw"></i>
               <span>Files</span>
@@ -86,7 +86,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="plans.html"
+              href="sections/plans.html"
             >
               <i class="fa-solid fa-table fa-fw"></i>
               <span>Plans</span>
