--- a/sections/profile.html
+++ b/sections/profile.html
@@ -23,7 +23,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="index.html"
+              href="../dashboard.html"
             >
               <i class="fa-solid fa-chart-bar fa-fw"></i>
               <span>Dashboard</span>
