--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>
             <a
               class="active d-flex align-center fs-14 c-black rad-6 p-10"
-              href="dashboard.html"
+              href="index.html"
             >
               <i class="fa-solid fa-chart-bar fa-fw"></i>
               <span>Dashboard</span>
