--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/all.min.css" />
-    <link rel="stylesheet" href="../css/my-framework.css" />
-    <link rel="stylesheet" href="../css/master.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/my-framework.css" />
+    <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
     <div class="page d-flex">
