Add Project Link To Repo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <span class="notification p-relative">
               <i class="fa-regular fa-bell fa-lg"></i>
             </span>
-            <img src="../imgs/avatar.png" alt="" />
+            <img src="imgs/avatar.png" alt="" />
           </div>
         </div>
         <!-- End Head -->
@@ -123,7 +123,7 @@
               </div>
               <!-- <img src="./imgs/welcome.png" alt=""> -->
             </div>
-            <img src="../imgs/avatar.png" alt="" class="avatar" />
+            <img src="imgs/avatar.png" alt="" class="avatar" />
             <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
               <div>
                 Ibrahim.A
@@ -137,7 +137,7 @@
               </div>
             </div>
             <a
-              href="profile.html"
+              href="sections/profile.html"
               class="visit d-block fs-14 bg-blue c-white w-fit btn-shape"
               >Profile</a
             >
@@ -251,7 +251,7 @@
           <div class="latest-news p-20 bg-white rad-10">
             <h2 class="mt-0 mb-20">Latest News</h2>
             <div class="news-row d-flex align-center txt-c-mobile">
-              <img class="rad-6" src="../imgs/news-01.png" alt="" />
+              <img class="rad-6" src="imgs/news-01.png" alt="" />
               <div class="info">
                 <h3 class="mb-5 mt-0">Created SASS Section</h3>
                 <p class="m-0 fs-12 c-gray">New SASS Examples & Tutorials</p>
@@ -259,7 +259,7 @@
               <span class="btn-shape bg-eee fs-10 label">3 Days Ago</span>
             </div>
             <div class="news-row d-flex align-center txt-c-mobile">
-              <img class="rad-6" src="../imgs/news-02.png" alt="" />
+              <img class="rad-6" src="imgs/news-02.png" alt="" />
               <div class="info">
                 <h3 class="mb-5 mt-0">Changed The Design</h3>
                 <p class="m-0 fs-12 c-gray">A Brand New Website Design</p>
@@ -267,7 +267,7 @@
               <span class="btn-shape bg-eee fs-10 label">5 Days Ago</span>
             </div>
             <div class="news-row d-flex align-center txt-c-mobile">
-              <img class="rad-6" src="../imgs/news-03.png" alt="" />
+              <img class="rad-6" src="imgs/news-03.png" alt="" />
               <div class="info">
                 <h3 class="mb-5 mt-0">Team Increased</h3>
                 <p class="m-0 fs-12 c-gray">3 Developers Joined The Team</p>
@@ -275,7 +275,7 @@
               <span class="btn-shape bg-eee fs-10 label">7 Days Ago</span>
             </div>
             <div class="news-row d-flex align-center txt-c-mobile">
-              <img class="rad-6" src="../imgs/news-04.png" alt="" />
+              <img class="rad-6" src="imgs/news-04.png" alt="" />
               <div class="info">
                 <h3 class="mb-5 mt-0">Added Payment Gateway</h3>
                 <p class="m-0 fs-12 c-gray">Many New Payment Gateways Added</p>
@@ -370,7 +370,7 @@
             <ul>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/pdf.svg" />
+                  <img class="mr-10" src="imgs/pdf.svg" />
                   <div>
                     <span class="d-block">my-file.pdf</span>
                     <span class="fs-14 c-gray">Elzero</span>
@@ -380,7 +380,7 @@
               </li>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/avi.svg" />
+                  <img class="mr-10" src="imgs/avi.svg" />
                   <div>
                     <span class="d-block">my-video-file.avi</span>
                     <span class="fs-14 c-gray">Admin</span>
@@ -390,7 +390,7 @@
               </li>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/psd.svg" />
+                  <img class="mr-10" src="imgs/psd.svg" />
                   <div>
                     <span class="d-block">my-PSD-file.psd</span>
                     <span class="fs-14 c-gray">Osama</span>
@@ -400,7 +400,7 @@
               </li>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/zip.svg" />
+                  <img class="mr-10" src="imgs/zip.svg" />
                   <div>
                     <span class="d-block">my-zip-file.zip</span>
                     <span class="fs-14 c-gray">User</span>
@@ -410,7 +410,7 @@
               </li>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/dll.svg" />
+                  <img class="mr-10" src="imgs/dll.svg" />
                   <div>
                     <span class="d-block">my-DLL-file.dll</span>
                     <span class="fs-14 c-gray">Admin</span>
@@ -420,7 +420,7 @@
               </li>
               <li class="between-flex pb-10 mb-10">
                 <div class="d-flex align-center">
-                  <img class="mr-10" src="../imgs/eps.svg" />
+                  <img class="mr-10" src="imgs/eps.svg" />
                   <div>
                     <span class="d-block">my-EPS-file.eps</span>
                     <span class="fs-14 c-gray">Designer</span>
@@ -449,7 +449,7 @@
                 Finish The Project & Get Money
               </li>
             </ul>
-            <img class="launch-icon hide-mobile" src="../imgs/project.png" />
+            <img class="launch-icon hide-mobile" src="imgs/project.png" />
           </div>
           <!-- End Last Project Progress Widget -->
           <!-- Start Reminders Widget -->
@@ -493,7 +493,7 @@
           <div class="latest-post p-20 bg-white rad-10 p-relative">
             <h2 class="mt-0 mb-20">latest Post</h2>
             <div class="top d-flex align-center">
-              <img class="avatar mr-15" src="../imgs/avatar.png" alt="" />
+              <img class="avatar mr-15" src="imgs/avatar.png" alt="" />
               <div class="info">
                 <p class="mt-0 mb-5 fw-bold">El-Ibrahimy</p>
                 <span class="c-gray">About 3 Hours Ago</span>
@@ -566,10 +566,10 @@
                   <td>Ministry</td>
                   <td>$5300</td>
                   <td>
-                    <img src="../imgs/team-01.png" alt="" />
-                    <img src="../imgs/team-02.png" alt="" />
-                    <img src="../imgs/team-03.png" alt="" />
-                    <img src="../imgs/team-04.png" alt="" />
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
+                    <img src="imgs/team-04.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-orange c-white btn-shape"
@@ -583,9 +583,9 @@
                   <td>El-Ibrahimy Company</td>
                   <td>$1500</td>
                   <td>
-                    <img src="../imgs/team-01.png" alt="" />
-                    <img src="../imgs/team-03.png" alt="" />
-                    <img src="../imgs/team-04.png" alt="" />
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
+                    <img src="imgs/team-04.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-blue c-white btn-shape"
@@ -599,8 +599,8 @@
                   <td>Bouba</td>
                   <td>$800</td>
                   <td>
-                    <img src="../imgs/team-02.png" alt="" />
-                    <img src="../imgs/team-03.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-green c-white btn-shape"
@@ -614,8 +614,8 @@
                   <td>Mahmoud</td>
                   <td>$600</td>
                   <td>
-                    <img src="../imgs/team-01.png" alt="" />
-                    <img src="../imgs/team-02.png" alt="" />
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-green c-white btn-shape"
@@ -629,8 +629,8 @@
                   <td>Sayed</td>
                   <td>$300</td>
                   <td>
-                    <img src="../imgs/team-01.png" alt="" />
-                    <img src="../imgs/team-04.png" alt="" />
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-04.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-red c-white btn-shape"
@@ -644,10 +644,10 @@
                   <td>Arena Company</td>
                   <td>$2600</td>
                   <td>
-                    <img src="../imgs/team-01.png" alt="" />
-                    <img src="../imgs/team-02.png" alt="" />
-                    <img src="../imgs/team-05.png" alt="" />
-                    <img src="../imgs/team-04.png" alt="" />
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
+                    <img src="imgs/team-05.png" alt="" />
+                    <img src="imgs/team-04.png" alt="" />
                   </td>
                   <td>
                     <span class="label fs-14 bg-green c-white btn-shape"
