Modify Social Info Widget in Settings Page

--- a/sections/settings.html
+++ b/sections/settings.html
@@ -238,7 +238,7 @@
               <input
                 class="w-full"
                 type="text"
-                placeholder="Twitter Username"
+                placeholder="Facebook Username"
               />
             </div>
             <div class="linkedin d-flex align-center mb-15">
@@ -246,7 +246,7 @@
               <input
                 class="w-full"
                 type="text"
-                placeholder="Twitter Username"
+                placeholder="Linkedin Username"
               />
             </div>
             <div class="youtube d-flex align-center mb-0">
@@ -254,7 +254,7 @@
               <input
                 class="w-full"
                 type="text"
-                placeholder="Twitter Username"
+                placeholder="Youtube Username"
               />
             </div>
           </div>
